added important get APIs
